fixed layout issue of mybooking template

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1657,7 +1657,7 @@ account-btn {
 }
 
 .heigth {
-  height: 80vh;
+  min-height: 80vh;
 }
 
 .login-form {
